# bond

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  implementation-phase-1.md  init-implementation-plan.md  main.py  pyproject.toml  settings.json  test_anthropic_api.py  test_anthropic_endpoint.py  test_direct.py  test_endpoints.py  test_with_anthropic.py  test_z_ai.py
.claude/: APEX2-WORKFLOW.md
.claude/agents/: apex2-orchestrator.md
.claude/hooks/: hooks.json  hooks.json.backup
.claude/output-styles/: apex2-workflow.md
.claude/skills/: README.md
bond/: agent.py  cli.py  config.py  tools.py  workspace.py
docs/: bash-tools.md
docs/fixes/: tool-call-messaging-fixes.md
docs/plans/: Apex2-Terminal-Bench-Agent.md  Bond-Terminal-Bench-Enhancement-Codex-Feedback.md  Bond-Terminal-Bench-Enhancement-v2.md  Bond-Terminal-Bench-Enhancement.md  init-implementation-plan.md  review-fix-tool-calls.md
docs/plans/factory/: 2025-11-08-apex2-inspired-claude-code-skills.md  2025-11-08-apex2-process-flow-orchestration-final-specification.md  2025-11-08-fix-missing-os-import-in-stop-hook.md  2025-11-08-workspace-isolation-prevent-directory-pollution-from-demos-and-tests.md
openspec/: project.md
scripts/: demo_gh.py  demo_tree.py
scripts/test/: test_bash_tools.py
static/css/: style.css
templates/: index.html
